# my-website-server

./: .gitignore  Cargo.toml  Rocket.toml
src/: cors.rs  main.rs
src/lastfm/: mod.rs  model.rs  routes.rs
src/letterboxd/: mod.rs  model.rs  routes.rs
src/notes/: mod.rs  model.rs  routes.rs
