[package]
name = "my-website-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
image = "0.25.2"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros" ] }
dotenvy = "0.15.7"
tokio = "1.45.1"
