[package]
name = "my-website-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
tokio = "1.48.0"
proc-macro2 = "1.0.103"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "macros" ] }
select = "0.6.1"
itertools = "0.14.0"
serde_json = "1.0.145"
futures = "0.3.31"
